--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,4 @@
+version: 1.0.{build}
 image:
 - Visual Studio 2015
 - Ubuntu
@@ -9,4 +10,4 @@ for:
       - image: Ubuntu
 
   build_script:
-  - g++ -o enet server test enet server test.cpp -std=c++11 -lenet
+  - g++ -o "enet server test" "enet server test.cpp" -std=c++11 -lenet
