--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,4 +12,9 @@ for:
   build_script:
   - sudo apt-get install build-essential
   - cd "enet server test"
-  - g++ -o "enet server test" "enet server test.cpp" -std=c++11 -lenet -iquote.
+  - cd "enet2"
+  - cmake CMakeLists.txt
+  - make
+  - cp libenet.a ../libenet.a
+  - cd ..
+  - g++ -o "enet server test" "enet server test.cpp" -std=c++11 -L. -lenet -iquote.
