--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ for:
 -
   matrix:
     only:
-      - image: Ubuntu
+      - image: ubuntu1804
 
   build_script:
   - sudo apt-get install build-essential
